swagger-ui examples and readme updates
